Fix content and overflow (#2)
* Adjust content

* Hide overflow

--- a/style.css
+++ b/style.css
@@ -1,19 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
 
-body,
-h1,
-p {
-  font-family: 'Source Code Pro', monospace;
+html,
+body {
+  margin: 0;
+  padding: 0;
 }
 
 body {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  margin: 0;
+  height: 99vh;
+  overflow: hidden;
 }
 
-#wrapper {
+main {
   text-align: center;
+}
+
+h1 {
+  font-family: 'Source Code Pro', monospace;
 }
